--- a/Chess/app/src/main/res/values-pl-rPL/strings.xml
+++ b/Chess/app/src/main/res/values-pl-rPL/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Mobilne Szachy</string>
     <string name="app_title">Szachy</string>
+    <string name="play_button">Play</string>
+
 </resources>
