--- a/Chess/app/src/main/res/values/strings.xml
+++ b/Chess/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Mobile Chess</string>
     <string name="app_title">Chess</string>
     <string name="play_button">Play</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
